examples/invalid/invalid_config.reqlang
#!/usr/bin/env reqlang

/123=123
---
GET http://example.com HTTP/1.1
---
---
